--- a/AndroidApp/app/src/main/res/values/themes.xml
+++ b/AndroidApp/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.View" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Qers" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.View" parent="Base.Theme.View" />
+    <style name="Theme.Qers" parent="Base.Theme.Qers" />
 </resources>
