--- a/WebSite/static/css/style.css
+++ b/WebSite/static/css/style.css
@@ -75,8 +75,23 @@ h2 {
     transition: 0.3s;
 }
 
+.btn:hover:not(:disabled) {
+    background-color: #45a049;
+}
+
+.btn:disabled {
+    background-color: #ccc;     /* серый фон */
+    color: #666;                /* тусклый текст */
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
 .btn:hover {
     background: #7a34c1;
+}
+
+.btn:disabled:hover {
+    background-color: #ccc;
 }
 
 /* Ссылки */
